all pages are responsive, but slightly off center.  Need to fix that

--- a/frontend_final_project/frontend_footymatch/src/index.css
+++ b/frontend_final_project/frontend_footymatch/src/index.css
@@ -1335,7 +1335,7 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .teampage123 {
+  .teampage123, .login-head, .registration {
     max-width: 75%; /* Set max width for smaller screens */
     margin: 0 auto; /* Center the content horizontally */
     padding: 0 20px; /* Add padding to the sides if needed */
